# fossil-ai

./: README.md  SECURITY.md  conanfile.py  meson.build
code/logic/: iochat.c  jellyfish.c  language.c  meson.build
code/logic/fossil/ai/: framework.h  iochat.h  jellyfish.h  language.h
code/tests/: meson.build
code/tests/cases/: test_iochat.c  test_iochat.cpp  test_jellyfish.c  test_jellyfish.cpp  test_lang.c  test_lang.cpp
